# tpu-demo

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
hello/: __init__.py
src/: loc_man.py  main.py  power_man.py
tests/: test_hello.py  test_loc_man.py  test_power_man.py
