[project]
name = "python-project"
version = "0.1.0"
description = "A Python project managed with uv"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
